fix table overflow, add .gitignore file

--- a/naitikdiamondtools/basic_app/static/assets/css/style.css
+++ b/naitikdiamondtools/basic_app/static/assets/css/style.css
@@ -7397,7 +7397,7 @@ del {
 /* line 329, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_elements.scss */
 .progress-table .serial {
   width: 11.83%;
-  padding-left: 30px;
+  padding-left: 20px;
 }
 
 /* line 333, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_elements.scss */
